@@ -155,5 +155,17 @@
             </defaults>
                    <help>Name the statistics to evaluate. The complete list of valid statistics names is "samples,counts,fold-change,fold-change-magnitude,log2-fold-change,group-averages,t-test,fisher,fisher-r,chi-square,Bonferroni,BH". This option is available since Goby 1.7.</help>
         </flaggedOption>
+        <flaggedOption>
+            <id>filter-ambiguous-reads</id>
+            <longFlag>filter-ambiguous-reads</longFlag>
+            <required>true</required>
+            <help>If true, the reads that match more locations than the ambiguity threshold are not considered when calculating counts. When false, all reads are considered. Please note that prior to Goby 1.9.7.1, this mode used false. The default for Goby 1.9.7.1+ is true.</help>
+            <stringParser>
+                <classname>BooleanStringParser</classname>
+            </stringParser>
+            <defaults>
+                <string>true</string>
+            </defaults>
+        </flaggedOption>
     </parameters>
 </jsap>
